# sot_pr2

./: .travis.yml  CMakeLists.txt  manifest.xml  package.xml
.travis/: before_install  build
launch/: pr2_empty_world.launch  spawn_pr2.launch
src/dynamic_graph/sot/pr2/: pr2_tasks.py
